--- a/personal_safety/pom/pom.xml
+++ b/personal_safety/pom/pom.xml
@@ -1,7 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.universAAL.AALaplication</groupId>
+	<parent>
+		<artifactId>new_services.pom</artifactId>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<version>0.1.0-SNAPSHOT</version>
+		<relativePath>../../pom</relativePath>
+	</parent>
+	<modelVersion>4.0.0</modelVersion>
   <artifactId>personal_safety.pom</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -30,91 +35,4 @@
   	<developerConnection>scm:svn:http://forge.universaal.org/svn/new_services/trunk/personal_safety</developerConnection>
   	<url>http://a1gforge.igd.fraunhofer.de/gf/project/new_services/scmsvn/?action=browse&amp;path=%2Ftrunk%2Fpersonal_safety%2F</url>
   </scm>
-
- <repositories>
-    <repository>
-      <id>central</id>
-      <name>Central Maven Repository</name>
-      <url>http://repo1.maven.org/maven2</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>apache-snapshots</id>
-      <name>Apache Snapshots</name>
-      <url>http://people.apache.org/repo/m2-snapshot-repository</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <updatePolicy>daily</updatePolicy>
-      </snapshots>			
-    </repository>
-    <repository>
-      <id>iks-repository</id>
-      <name>ETH Zurich IKS Repository</name>
-      <url>http://www.flowsgi.inf.ethz.ch/repository/maven2</url>
-    </repository>
-		<repository>
-			<id>uaal</id>
-			<name>universAAL Repositories</name>
-			<url>http://depot.universaal.org/maven-repo/releases/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>uaal-snapshots</id>
-			<name>universAAL Snapshot Repositories</name>
-			<url>http://depot.universaal.org/maven-repo/snapshots/</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
-		<repository>
-			<id>uaal-thirdparty</id>
-			<name>universAAL ThirdParty Repositories</name>
-			<url>http://depot.universaal.org/maven-repo/thirdparty/</url>
-		</repository>
-  </repositories>
-
-  <pluginRepositories>
-    <pluginRepository>
-      <id>central</id>
-      <name>Central Maven Repository</name>
-      <url>http://repo1.maven.org/maven2</url>
-      <layout>default</layout>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <releases>
-        <updatePolicy>never</updatePolicy>
-      </releases>
-    </pluginRepository>
-  </pluginRepositories>
-
-  <organization>
-		<name>universAAL Consortium</name>
-		<url>http://www.universAAL.org/</url>
-  </organization>
-  <properties>
-    <remoteOBR />
-    <!-- Default configuration for compiler source and target JVM -->
-    <maven.compile.source>1.5</maven.compile.source>
-    <maven.compile.target>1.5</maven.compile.target>
-  </properties>
-
-  <distributionManagement>
-		<repository>
-			<id>releases</id>
-			<name>universAAL Releases</name>
-			<url>http://depot.universaal.org/nexus/content/repositories/releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<name>universAAL Snapshots</name>
-			<url>http://depot.universaal.org/nexus/content/repositories/snapshots/</url>
-		</snapshotRepository>
-  </distributionManagement>
 </project>
