--- a/personal_safety/service/pom.xml
+++ b/personal_safety/service/pom.xml
@@ -1,8 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>personal_safety.pom</artifactId>
-		<groupId>org.universAAL.AALaplication</groupId>
+		<groupId>org.universAAL.AALapplication</groupId>
 		<version>0.1.0-SNAPSHOT</version>
+		<relativePath>../pom/</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
   <groupId>org.universAAL.AALapplication </groupId>
@@ -37,8 +38,6 @@
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.io</artifactId>
 			<version>0.3.0-SNAPSHOT</version>
-			<type>bundle</type>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
@@ -49,15 +48,16 @@
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.context</artifactId>
 			<version>0.3.0-SNAPSHOT</version>
-			<type>bundle</type>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.phWorld</artifactId>
 			<version>0.2.1-SNAPSHOT</version>
-			<type>bundle</type>
-			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.AALapplication</groupId>
+			<artifactId>personal_safety.sms</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
     </dependencies>
     <build>
