--- a/personal_safety/sms.sender/pom.xml
+++ b/personal_safety/sms.sender/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.universAAL.AALaplication</groupId>
+		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>personal_safety.pom</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 		<relativePath>../pom/pom.xml</relativePath>
