--- a/personal_safety/service/pom.xml
+++ b/personal_safety/service/pom.xml
@@ -69,7 +69,7 @@
 				<configuration>
 					<instructions>
 						<Bundle-Name>${pom.name}</Bundle-Name>
-						<Bundle-Activator>org.universAAL.AALapplication.personal_safety.stub.Activator</Bundle-Activator>
+						<Bundle-Activator>org.universAAL.AALapplication.personal_safety.service.Activator</Bundle-Activator>
 						<Bundle-Description>${pom.description}</Bundle-Description>
 						<Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
 					</instructions>
