--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ personal_safety/service/.settings
 personal_safety/service/personal_safety.service.launch
 personal_safety/service/rundir
 personal_safety/service/target
+personal_safety/sms.sender/.classpath
+personal_safety/sms.sender/.project
+personal_safety/sms.sender/.settings
 personal_safety/sms.sender/target
 pom/.project
 pom/.settings
