--- a/personal_safety/pom/pom.xml
+++ b/personal_safety/pom/pom.xml
@@ -12,6 +12,12 @@
   <packaging>pom</packaging>
   <name>Personal Safety AAL Service</name>
   <url>http://a1gforge.igd.fraunhofer.de/wiki/new_services:Personal_safety_universAAL_service</url>
+  <licenses>
+		<license>
+		<name>Apache 2.0</name>
+		<url>http://www.apache.org/licenses/</url>
+		</license>
+	</licenses>
   <issueManagement>
   	<system>GForge - Tracker</system>
   	<url>http://a1gforge.igd.fraunhofer.de/gf/project/new_services/tracker/?action=TrackerItemBrowse&amp;tracker_id=233</url>
@@ -35,4 +41,8 @@
   	<developerConnection>scm:svn:http://forge.universaal.org/svn/new_services/trunk/personal_safety</developerConnection>
   	<url>http://a1gforge.igd.fraunhofer.de/gf/project/new_services/scmsvn/?action=browse&amp;path=%2Ftrunk%2Fpersonal_safety%2F</url>
   </scm>
+  <modules>
+  	<module>../service</module>
+  	<module>../sms.sender</module>
+  </modules>
 </project>
