EEclipse files ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+health/pom/.project
+health/pom/.settings
 personal_safety/pom/*.project
 personal_safety/pom/*.settings
 personal_safety/service/*.classpath
