Health ontology first commit: Treatment template class

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+health/health.ont/.classpath
+health/health.ont/.project
+health/health.ont/.settings
+health/health.ont/target
 health/pom/.project
 health/pom/.settings
 personal_safety/pom/*.project
