--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+health/healt.treat.manager/.classpath
+health/healt.treat.manager/.project
+health/healt.treat.manager/.settings
+health/healt.treat.manager/target
 health/health.ont/.classpath
 health/health.ont/.project
 health/health.ont/.settings
