Health Treatment Logger first import. Health POM Modules add Health Treatment Manager POM Update

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+health/healt.treat.logger/.classpath
+health/healt.treat.logger/.project
+health/healt.treat.logger/.settings
+health/healt.treat.logger/target
 health/healt.treat.manager/.classpath
 health/healt.treat.manager/.project
 health/healt.treat.manager/.settings
