--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ help_when_out/hwo.mobile/.classpath
 help_when_out/hwo.mobile/.project
 help_when_out/hwo.mobile/.settings
 help_when_out/hwo.mobile/target
+personal_safety/personal_safety.sw.panic/.classpath
+personal_safety/personal_safety.sw.panic/.project
+personal_safety/personal_safety.sw.panic/.settings
+personal_safety/personal_safety.sw.panic/target
 personal_safety/pom/*.project
 personal_safety/pom/*.settings
 personal_safety/service/*.classpath
