--- a/health/healt.treat.manager/pom.xml
+++ b/health/healt.treat.manager/pom.xml
@@ -4,6 +4,7 @@
     <artifactId>health.pom</artifactId>
     <groupId>org.universAAL.AALapplication</groupId>
     <version>0.1.0-SNAPSHOT</version>
+    <relativePath>../pom</relativePath>
   </parent>
   <artifactId>health.treat.manager</artifactId>
   <version>0.1.0-SNAPSHOT</version>
