--- a/personal_safety/sw.panic/pom.xml
+++ b/personal_safety/sw.panic/pom.xml
@@ -74,6 +74,7 @@
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Export-Package>org.universAAL.Application.personal_safety.sw.panic.osgi</Export-Package>
+						<Private-Package>org.universAAL.Application.personal_safety.sw.panic</Private-Package>
 					</instructions>
 				</configuration>
 			</plugin>
