Run configuration and environment for Personal Safety

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,13 @@ help_when_out/hwo.mobile/.settings
 help_when_out/hwo.mobile/target
 personal_safety/pom/*.project
 personal_safety/pom/*.settings
+personal_safety/run/.classpath
+personal_safety/run/.project
+personal_safety/run/.settings
+personal_safety/run/runner/bundles
+personal_safety/run/runner/felix/cache/runner
+personal_safety/run/runner/log
+personal_safety/run/target
 personal_safety/service/*.classpath
 personal_safety/service/*.project
 personal_safety/service/*.settings
