Coordinator=true configuration

--- a/personal_safety/run/runner/felix/config.ini
+++ b/personal_safety/run/runner/felix/config.ini
@@ -11,7 +11,7 @@
 ##############################
 # Felix settings
 ##############################
-org.osgi.framework.storage=C:/Users/amedrano/workspace/personal_safety.run/runner/felix/cache/runner
+org.osgi.framework.storage=C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/felix/cache/runner
 org.osgi.framework.startlevel=9
 felix.startlevel.bundle=5
 org.osgi.framework.storage.clean=onFirstInit
@@ -22,43 +22,43 @@ org.osgi.framework.system.packages=javax.accessibility,javax.activation,javax.ac
 # Client bundles to install
 ##############################
 felix.auto.start.1=\
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/osgi.compendium_4.1.0.build-200702212030.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/org.apache.felix.shell_1.0.2.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/org.apache.felix.shell.tui_1.0.2.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/org.apache.felix.log_1.0.1.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/org.apache.felix.configadmin_1.2.8.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/org.apache.felix.upnp.basedriver_0.8.0.jar"
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/osgi.compendium_4.1.0.build-200702212030.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/org.apache.felix.shell_1.0.2.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/org.apache.felix.shell.tui_1.0.2.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/org.apache.felix.log_1.0.1.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/org.apache.felix.configadmin_1.2.8.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/org.apache.felix.upnp.basedriver_0.8.0.jar"
 felix.auto.start.3=\
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/wrap_mvn_jp.go.ipa_jgcl_1.0_0.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/wrap_mvn_java3d_vecmath_1.3.1_0.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/wrap_mvn_org.bouncycastle_jce.jdk13_144_0.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/wrap_mvn_java3d_j3d-core_1.3.1_0.jar"
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/wrap_mvn_jp.go.ipa_jgcl_1.0_0.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/wrap_mvn_java3d_vecmath_1.3.1_0.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/wrap_mvn_org.bouncycastle_jce.jdk13_144_0.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/wrap_mvn_java3d_j3d-core_1.3.1_0.jar"
 felix.auto.start.4=\
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/org.ops4j.pax.logging.pax-logging-api_1.5.2.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/org.ops4j.pax.logging.pax-logging-service_1.5.2.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/org.ops4j.pax.configmanager_0.2.2.jar"
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/org.ops4j.pax.logging.pax-logging-api_1.5.2.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/org.ops4j.pax.logging.pax-logging-service_1.5.2.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/org.ops4j.pax.configmanager_0.2.2.jar"
 felix.auto.start.5=\
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/mw.acl.interfaces_0.3.0.SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/mw.acl.upnp_0.2.0.SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/mw.bus.model_0.3.0.SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/mw.data.representation_0.3.0.SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/mw.data.serialization_0.3.0.SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/mw.bus.service_0.3.0.SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/mw.bus.context_0.3.0.SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/mw.bus.io_0.3.0.SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/ont.phWorld_0.2.3.SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/ont.profile_0.3.0.SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/ont.risk_0.1.0.SNAPSHOT.jar"
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/mw.acl.interfaces_0.3.0.SNAPSHOT.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/mw.acl.upnp_0.2.0.SNAPSHOT.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/mw.bus.model_0.3.0.SNAPSHOT.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/mw.data.representation_0.3.0.SNAPSHOT.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/mw.data.serialization_0.3.0.SNAPSHOT.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/mw.bus.service_0.3.0.SNAPSHOT.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/mw.bus.context_0.3.0.SNAPSHOT.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/mw.bus.io_0.3.0.SNAPSHOT.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/ont.phWorld_0.2.3.SNAPSHOT.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/ont.profile_0.3.0.SNAPSHOT.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/ont.risk_0.1.0.SNAPSHOT.jar"
 felix.auto.start.6=\
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/ui.dm.mobile_0.2.0.pmd-SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/wrap_mvn_org.universAAL.ui_ui.handler.gui.tableLayout_0.jar"
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/ui.dm.mobile_0.2.0.pmd-SNAPSHOT.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/wrap_mvn_org.universAAL.ui_ui.handler.gui.tableLayout_0.jar"
 felix.auto.install.6=\
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/ui.handler.gui_0.1.1.SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/personal_safety.sms_0.1.0.SNAPSHOT.jar"
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/ui.handler.gui_0.1.1.SNAPSHOT.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/personal_safety.sms_0.1.0.SNAPSHOT.jar"
 felix.auto.install.7=\
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/personal_safety.service_0.1.0.SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/personal_safety.sw.panic_0.1.0.SNAPSHOT.jar" \
-"file:/C:/Users/amedrano/workspace/personal_safety.run/runner/bundles/smp.test-location.publisher_0.0.2.SNAPSHOT.jar"
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/personal_safety.service_0.1.0.SNAPSHOT.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/personal_safety.sw.panic_0.1.0.SNAPSHOT.jar" \
+"file:/C:/Users/amedrano/workspace/uAAL-SVN/new_services/trunk/personal_safety/run/runner/bundles/smp.test-location.publisher_0.0.2.SNAPSHOT.jar"
 
 ##############################
 # System properties
