--- a/.gitattributes
+++ b/.gitattributes
@@ -262,6 +262,7 @@ agenda/agenda_ont/eventSelection.ont/src/main/java/gr/anco/persona/eventSelectio
 agenda/agenda_uAAL_pom/.project -text
 agenda/agenda_uAAL_pom/.settings/org.maven.ide.eclipse.prefs -text
 agenda/agenda_uAAL_pom/desktop.ini -text
+agenda/agenda_uAAL_pom/launches/agenda_uAAL.launch -text
 agenda/agenda_uAAL_pom/pom.xml -text
 agenda/dm/.classpath -text
 agenda/dm/.project -text
