--- a/health/health.ont/pom.xml
+++ b/health/health.ont/pom.xml
@@ -47,7 +47,14 @@
 			<artifactId>ont.profile</artifactId>
 			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.osgi.core</artifactId>
+			<version>1.4.0</version>
+			<type>bundle</type>
+			<scope>provided</scope>
+		</dependency>
+  </dependencies>
     
     <build>
 		<plugins>
