--- a/health/healt.treat.logger/pom.xml
+++ b/health/healt.treat.logger/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>health.ont</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.universAAL.context</groupId>
+			<artifactId>ctxt.che</artifactId>
+			<version>0.2.0-SNAPSHOT</version>
+		</dependency>
   </dependencies>
     
     <build>
