--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+agenda/agenda.ont/.classpath
+agenda/agenda.ont/.project
+agenda/agenda.ont/.settings
+agenda/agenda.ont/target
 health/healt.treat.logger/.classpath
 health/healt.treat.logger/.project
 health/healt.treat.logger/.settings
