--- a/agenda/eventSelection.client/pom.xml
+++ b/agenda/eventSelection.client/pom.xml
@@ -121,10 +121,10 @@
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-						<Bundle-Name>${pom.name}</Bundle-Name>
+						<Bundle-Name>${project.name}</Bundle-Name>
 						<Bundle-Activator>org.universAAL.eventSelectionTool.client.Activator</Bundle-Activator>
-						<Bundle-Description>${pom.description}</Bundle-Description>
-						<Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
+						<Bundle-Description>${project.description}</Bundle-Description>
+						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Export-Package> org.universAAL.eventSelectionTool.client</Export-Package>
 <!--						<Import-Package>org.osgi.framework,-->
 <!--							org.persona.middleware.*,org.persona.ontology.*,javax.xml.*,org.osgi.service.log,-->
