--- a/agenda/eventSelection.server/pom.xml
+++ b/agenda/eventSelection.server/pom.xml
@@ -158,10 +158,10 @@
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-						<Bundle-Name>${pom.name}</Bundle-Name>
+						<Bundle-Name>${project.name}</Bundle-Name>
 						<Bundle-Activator>org.universAAL.eventSelectionTool.server.Activator</Bundle-Activator>
-						<Bundle-Description>${pom.description}</Bundle-Description>
-						<Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
+						<Bundle-Description>${project.description}</Bundle-Description>
+						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Export-Package> org.universAAL.eventSelectionTool.server</Export-Package>
 						<Private-Package>org.universAAL.eventSelectionTool.server.impl,
 							org.universAAL.eventSelectionTool.database</Private-Package>
