--- a/personal_safety/service/pom.xml
+++ b/personal_safety/service/pom.xml
@@ -73,6 +73,7 @@
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Private-Package>org.universAAL.AALapplication.personal_safety.service</Private-Package>
+						<Private-Package>org.universAAL.AALapplication.personal_safety.service</Private-Package>
 					</instructions>
 				</configuration>
 			</plugin>
