--- a/pom/pom.xml
+++ b/pom/pom.xml
@@ -129,7 +129,7 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<configuration>
-						<skip>true</skip>
+						<skip>${maven.test.skip}</skip>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -156,30 +156,36 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.8.1</version>
+				<version>2.10</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>2.7</version>
+				<!-- Default Checkstyle configuration is the Sun Microsystems Definition. As defined in D2.3 -->
+				<!--
 				<configuration>
-					<configLocation>http://svn.apache.org/repos/asf/maven/plugins/trunk/maven-checkstyle-plugin/src/main/resources/config/maven_checks.xml</configLocation>
+ 					<configLocation>http://svn.apache.org/repos/asf/maven/plugins/trunk/maven-checkstyle-plugin/src/main/resources/config/maven_checks.xml</configLocation> 
 					<headerLocation>http://svn.apache.org/repos/asf/maven/plugins/trunk/maven-checkstyle-plugin/src/main/resources/config/maven-header.txt</headerLocation>
-				</configuration>
-				<version>2.6</version>
+				</configuration> 
+				-->
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
 				<version>2.5</version>
 			</plugin>
-<!--			<plugin>-->
-<!--				<groupId>org.codehaus.mojo</groupId>-->
-<!--				<artifactId>cobertura-maven-plugin</artifactId>-->
-<!--			</plugin>-->
+			<!--  
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.5.1</version>
+			</plugin>
+			-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.2</version>
+				<version>2.3</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -200,6 +206,8 @@
 						<link>http://jakarta.apache.org/velocity/api/</link>
 					</links>
 					<doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
+
+					<!-- <docletPath>/path/to/UmlGraph.jar</docletPath> -->
 					<docletArtifact>
 						<groupId>org.umlgraph</groupId>
 						<artifactId>doclet</artifactId>
@@ -217,7 +225,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-plugin-plugin</artifactId>
-				<version>2.7</version>
+				<version>2.9</version>
 			</plugin>
 		</plugins>
 	</reporting>
@@ -227,6 +235,8 @@
 		<!-- Default configuration for compiler source and target JVM -->
 		<maven.compile.source>1.5</maven.compile.source>
 		<maven.compile.target>1.5</maven.compile.target>
+		<!-- Skip testing by Default, to enable tests run maven with "-DskipTests=false" option -->
+		<skipTests>true</skipTests>
 	</properties>
 
 	<distributionManagement>
