--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,10 @@ help_when_out/hwo.mobile/.classpath
 help_when_out/hwo.mobile/.project
 help_when_out/hwo.mobile/.settings
 help_when_out/hwo.mobile/target
+long_term_behav/ont.drools/.classpath
+long_term_behav/ont.drools/.project
+long_term_behav/ont.drools/.settings
+long_term_behav/ont.drools/target
 nutritional/NutritionalAdvisor/.classpath
 nutritional/NutritionalAdvisor/.project
 nutritional/NutritionalAdvisor/.settings
